Add header on index.html

--- a/css/main.css
+++ b/css/main.css
@@ -11497,4 +11497,8 @@ fieldset:disabled .btn {
     display: none !important;
   }
 }
+
+.header__logo {
+  height: 40px;
+}
 /*# sourceMappingURL=main.css.map */
