--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -12,6 +12,12 @@
         img {
             margin-bottom: 10px;
         }
+        p {
+            a {
+                text-decoration: none;
+                color: map-get($colores-estudio, "naranja");
+            }
+        }
     }
 }
 
