--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -9,4 +9,7 @@
     .bg-#{$nombre}-opacity-3 {
         background-color: rgba($color, .3);
     }
+    .color-#{$nombre} {
+        color: $color;
+    }
 }
