--- a/scss/components/_jumbo.scss
+++ b/scss/components/_jumbo.scss
@@ -7,7 +7,32 @@
 
 .titulo-carousel {
     position: absolute;
-    top: 50px;
+    top: 150px;
     width: 100%;
     color: white;
+    padding: 20px;
+    text-shadow: 2px 2px 1px rgba(map-get($colores-estudio, "gris-mine-shaft"), 1);
+    transition: 2s;
+    h1 {
+        font-size: 55px;
+    }
+    h3 {
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 992px) {
+    .titulo-carousel {
+        position: absolute;
+        top: 80px;
+        width: 100%;
+        color: white;
+        padding: 20px;
+        h1 {
+            font-size: 55px;
+        }
+        h3 {
+            font-size: 40px;
+        }
+    }
 }
