--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,13 @@
 .header__logo {
     height: 40px;
 }
+
+.header--custom-height {
+    height: 10vh;
+}
+
+@media (max-width: 992px) {
+    .header--custom-height {
+        height: auto;
+    }
+}
