--- a/css/main.css
+++ b/css/main.css
@@ -12688,4 +12688,49 @@ fieldset:disabled .btn {
     background-position: center;
   }
 }
+
+.contenido-404 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../../assets/images/viviendas-unifamiliares/casa-rossi-1.jpg);
+  background-repeat: space space;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.contenido-404 div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+.contenido-404 div img {
+  height: 70px;
+}
+
+.contenido-404 div h3, .contenido-404 div .h3 {
+  padding-bottom: 20px;
+}
+
+.contenido-404 div a {
+  padding: 10px;
+  border-radius: 4px;
+}
 /*# sourceMappingURL=main.css.map */
