--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,7 @@
 .header__logo {
     height: 40px;
 }
+
+.header--border-bottom {
+    border-bottom: 1px solid rgba(map-get($colores-estudio, "naranja"), 0.2);
+}
