--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,9 +1,31 @@
-$colores-estudio: (
-    naranja : #fc7404,
+$colores-estudio: (naranja : #fc7404,
     naranja-claro : #ea9539,
     negro : #070707,
     gris : #696969,
     gris-claro : #999999,
     gris-oscuro: #4c4c4c,
-    gris-mine-shaft: #353535
-)
+    gris-mine-shaft: #353535);
+    
+$font-family-sans-serif:
+"Lato",
+// Cross-platform generic font family (default user interface font)
+system-ui,
+// Safari for macOS and iOS (San Francisco)
+-apple-system,
+// Windows
+"Segoe UI",
+// Android
+Roboto,
+// Basic web fallback
+"Helvetica Neue",
+Arial,
+// Linux
+"Noto Sans",
+"Liberation Sans",
+// Sans serif fallback
+sans-serif,
+// Emoji fonts
+"Apple Color Emoji",
+"Segoe UI Emoji",
+"Segoe UI Symbol",
+"Noto Color Emoji";
