--- a/css/main.css
+++ b/css/main.css
@@ -8235,7 +8235,7 @@ textarea.form-control-lg {
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background-image: url(../../assets/images/viviendas-unifamiliares/casa-rossi-1.jpg);
+  background-image: url(../assets/images/viviendas-unifamiliares/casa-rossi-1.jpg);
   background-repeat: space space;
   justify-content: center; }
   .contenido-404 div {
