--- a/scss/views/_404.scss
+++ b/scss/views/_404.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-image: url(../../assets/images/viviendas-unifamiliares/casa-rossi-1.jpg);
+    background-image: url(../assets/images/viviendas-unifamiliares/casa-rossi-1.jpg);
     background-repeat: space space;
     justify-content: center;
     div {
